--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,108 +18,103 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/background"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ActivityMain">
 
     <EditText
         android:id="@+id/hostname"
-        android:hint="@string/main_txt_1"
-        android:background="@drawable/corners_top"
-        android:padding="8dp"
-        android:singleLine="true"
-        android:inputType="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/corners_top"
+        android:hint="@string/main_txt_1"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:padding="8dp"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/port"
-        android:hint="@string/main_txt_2"
-        android:background="@drawable/corners_center"
-        android:padding="8dp"
-        android:singleLine="true"
-        android:inputType="number"
-        android:layout_below="@+id/hostname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/hostname"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/corners_center"
+        android:hint="@string/main_txt_2"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:padding="8dp"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/timeout"
-        android:hint="@string/main_txt_3"
-        android:background="@drawable/corners_bottom"
-        android:padding="8dp"
-        android:singleLine="true"
-        android:inputType="number"
-        android:layout_below="@+id/port"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/port"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/corners_bottom"
+        android:hint="@string/main_txt_3"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:padding="8dp"
+        android:singleLine="true" />
 
     <com.dd.CircularProgressButton
         android:id="@+id/btnConnect"
-        android:layout_below="@+id/timeout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/timeout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:textColor="@color/white"
         android:textSize="18sp"
+        app:cpb_cornerRadius="12dp"
         app:cpb_textComplete="@string/main_txt_4"
         app:cpb_textError="@string/main_txt_5"
-        app:cpb_textIdle="@string/main_txt_6"
-        app:cpb_cornerRadius="12dp" />
+        app:cpb_textIdle="@string/main_txt_6" />
 
     <TextView
         android:id="@+id/cmdOutput"
-        android:ems="10"
-        android:padding="8dp"
-        android:gravity="bottom"
-        android:background="@drawable/corners_top"
-        android:layout_above="@+id/cmdInput"
-        android:layout_below="@+id/btnConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_above="@+id/cmdInput"
+        android:layout_below="@+id/btnConnect"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@drawable/corners_top"
+        android:ems="10"
+        android:gravity="bottom"
+        android:padding="8dp" />
 
     <EditText
         android:id="@+id/cmdInput"
-        android:hint="@string/main_txt_7"
-        android:singleLine="true"
-        android:imeOptions="actionDone"
-        android:padding="8dp"
-        android:background="@drawable/corners_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/corners_bottom"
+        android:hint="@string/main_txt_7"
+        android:imeOptions="actionDone"
+        android:importantForAutofill="no"
+        android:padding="8dp"
+        android:singleLine="true"
+        tools:ignore="RtlHardcoded" />
 
 </RelativeLayout>
